<resources>
    <string-array name="location_options">
        <item>Your Current Location</item>
        <item>Choose on Map</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Urdu</item>
    </string-array>
    <string name="app_name">WellnessVet</string>
    <string name="user_tab">USER</string>
    <string name="doctor_tab">DOCTOR</string>
    <string name="splash_image_description">Image Loading....</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="choose_on_map">Choose on Map</string>
    <string name="user_login">User Login</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="we_share_this_information_with_the_doctor">We share this information with the doctor</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number_hint">Mobile number e.g 03040556781</string>
    <string name="login">Login</string>
    <string name="or">oR</string>
    <string name="login_as_doctor">Login as Doctor</string>
    <string name="doctor_login">Doctor Login</string>
    <string name="we_share_this_information_with_the_user">We share this information with the user</string>
    <string name="login_as_user">Login as User</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="doctor_name">Name</string>
    <string name="doctor_city">City</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search...</string>
    <string name="save_next">Save and Next</string>
    <string name="doctor_name_hint">enter your name</string>
    <string name="doctor_city_hint">enter your city</string>
    <string name="logout_message">Are you sure you want to Logout ?</string>
    <string name="cancel_appointment_message">Are you sure you want to cancel appointment ?</string>
    <string name="enter_start_time">enter start Time</string>
    <string name="enter_end_time">enter end time</string>
    <string name="user_profile">User Profile</string>
    <string name="set_up_your_profile">Set up your Profile</string>
    <string name="add_necessary_info_to_complete_setup">Add Necessary info to complete setup</string>
    <string name="your_name">Your Name</string>
    <string name="e_g_jawad_ali">e.g Jawad Ali</string>
    <string name="city">City</string>
    <string name="e_g_faisalabad">e.g Faisalabad</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="chats">Chats</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="appointments">Appointments</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="fees">Fees</string>
    <string name="enter_fees">enter fees</string>
    <string name="set_up_your_timings_and_fees">Set up your Timings and Fees</string>
    <string name="doctor">Doctor</string>
    <string name="maps_api_key" translatable="false">AIzaSyCoDtci5S11xJfMTs4zIJvBoytoIKnfn_Y</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clinic_location">Clinic Location</string>
    <string name="enter_clinic_location">enter clinic location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name">Name</string>
    <string name="doctor_not_found">Doctor not found</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="directions">Directions</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="update_your_profile">Update your Profile</string>
    <string name="user_chat">User Chat</string>
    <string name="doctor_chat">Doctor Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="view_doctor_profile">View Doctor Profile</string>
    <string name="timings">Timings</string>
    <string name="appointment">Appointment</string>
    <string name="chat">Chat</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="reschedule_appointment">Reschedule Appointment</string>
    <string name="set_up_date_and_time">Select Date and Time to Schedule</string>
    <string name="reset_up_date_and_time">Select Date and Time to Reschedule</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="schedule">Schedule</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="email">Email</string>
    <string name="e_g_example_gmail_com">e.g example@gmail.com</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_atleast_6_words">enter atleast 6 words</string>
    <string name="please_enter_your_details">please enter your details</string>
    <string name="doctor_sign_up">Doctor Sign-up</string>
    <string name="user_sign_up">User Sign-up</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="select_an_image">Please select an image</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="messages_seen">messages seen</string>
    <string name="message_sent">message sent</string>
    <string name="enter_valid_city">Please enter valid city</string>
    <string name="enter_start_time_please">Please enter start time</string>
    <string name="enter_end_time_please">Please enter valid end time</string>
    <string name="enter_fees_please">Please enter valid fees</string>
    <string name="select_location_again">Please select location again</string>
    <string name="select_location">Please select location</string>
    <string name="users_exists">User Already Exists</string>
    <string name="choose_lang">Choose Language</string>
    <string name="account_not_exists">Account Doesn\'t Exist</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="enter_valid_account_number">Please enter valid account number</string>
    <string name="phone_number_already_exists">Phone number already exists. Please choose a different one</string>
    <string name="login_successfully">Logged in successfully</string>
    <string name="login_again">Please login again</string>
    <string name="signup_successfully">"Signed up successfully</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="select_your_city">select your city</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="welcome" translatable="false">Welcome | خوش آمدید</string>
    <string name="select_language" translatable="false">Select Language | زبان منتخب کریں</string>
    <string name="english" translatable="false">English | انگریزی</string>
    <string name="urdu" translatable="false">Urdu | اردو</string>
    <string name="let_s_start" translatable="false">Let\'s Start | شروع کرتے ہیں</string>
    <string name="wait_while_nuploading_data">Wait While\nUploading data...</string>
    <string name="enter_text">enter some text</string>
    <string name="otp">OTP</string>
    <string name="account_number">Account Number</string>
    <string name="enter_your_bank_account_number">enter your bank account number</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="payment_detail">Please Pay the following amount to confirm your appointment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="account_holder_name">Account Title</string>
    <string name="confirm_pay">Confirm and Pay</string>
    <string name="amount">Amount</string>
    <string name="calls_app_name" translatable="false">Call</string>
    <string name="api_key_current" translatable="false">bc3a9d133a874c329f561292</string>
    <string name="calls_quickstart_version" translatable="false">Quickstart %s</string>
    <string name="calls_sdk_version" translatable="false">SDK %s</string>
    <string name="calls_sign_in_with_qrcode" translatable="false">Sign in with QR code</string>
    <string name="calls_scanning_a_qrcode_description" translatable="false">Scan QR code from Calls studio on Sendbird dashboard.</string>
    <string name="calls_or" translatable="false">Or</string>
    <string name="calls_sign_in_manually" translatable="false">Sign in with ID</string>
    <string name="calls_sign_in_manually_title" translatable="false">Sign in</string>
    <string name="calls_app_id" translatable="false">Application ID</string>
    <string name="calls_user_id" translatable="false">User ID</string>
    <string name="calls_access_token" translatable="false">Access token (optional)</string>
    <string name="calls_sign_in" translatable="false">Sign in</string>
    <string name="calls_empty_nickname" translatable="false">—</string>
    <string name="calls_user_id_format" translatable="false">User ID: %s</string>
    <string name="calls_and_character" translatable="false">" · "</string>
    <string name="calls_notification_voice_calling_content" translatable="false">Voice call</string>
    <string name="calls_notification_video_calling_content" translatable="false">Video call</string>
    <string name="calls_notification_accept" translatable="false">Accept</string>
    <string name="calls_notification_decline" translatable="false">Decline</string>
    <string name="calls_notification_end" translatable="false">End</string>
    <string name="calls_make_a_call" translatable="false">Make a call</string>
    <string name="calls_history" translatable="false">Recents</string>
    <string name="calls_no_call_history" translatable="false">No call history</string>
    <string name="calls_settings" translatable="false">Settings</string>
    <string name="calls_application_information" translatable="false">Application information</string>
    <string name="calls_application_name" translatable="false">Name</string>
    <string name="calls_application_id" translatable="false">ID</string>
    <string name="calls_sign_out" translatable="false">Sign out</string>
    <string name="calls_muted_this_call" translatable="false">%s is muted</string>
    <string name="calls_incoming_voice_call" translatable="false">incoming voice call&#8230;</string>
    <string name="calls_incoming_video_call" translatable="false">incoming video call&#8230;</string>
    <string name="calls_connecting_call" translatable="false">connecting&#8230;</string>
    <string name="calls_calling" translatable="false">making voice call&#8230;</string>
    <string name="calls_video_calling" translatable="false">making video call&#8230;</string>
    <string name="calls_ending_voice_call" translatable="false">voice call ending&#8230;</string>
    <string name="enter_your_pet_s_name">enter your pet\'s name</string>
    <string name="enter_your_pet_s_age">enter your pet\'s age</string>
    <string name="enter_your_pet_s_breed">enter your pet\'s breed</string>
    <string name="add_pet">Add Pet</string>
</resources>