<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.user.UserLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/userLoginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/user_login"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <!-- TextView displaying a subheading -->
        <TextView
            android:id="@+id/enterCredentialsSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLoginHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/please_enter_your_credentials"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/emailHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterCredentialsSubHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/emailHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/passwordHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/hint_color"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_atleast_6_words"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/saveRelative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/passwordLayout">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="6dp" />

            <!--        end of login button-->


            <!--        start of don't have an account layout-->

            <RelativeLayout
                android:id="@+id/haveAccountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginBtn"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/hint_color" />

                <TextView
                    android:id="@+id/signUpTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/have_account"
                    android:text="@string/sign_up"
                    android:textColor="@color/dark_navy_blue" />
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>