<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.doctor.DoctorProfileActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TextView displaying header text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/doctor_profile"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout"
        android:background="@color/white"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <!-- TextView displaying "set up your profile" -->
            <TextView
                android:id="@+id/setUpProfileHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/set_up_your_profile"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <!-- TextView displaying a subheading -->
            <TextView
                android:id="@+id/setUpProfileSubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setUpProfileHeading"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/add_necessary_info_to_complete_setup"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/nameRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setUpProfileSubHeading">

                <!-- TextView displaying "Phone number" -->
                <TextView
                    android:id="@+id/nameHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/doctor_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- TextInputLayout to contain the input field for phone number -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/nameHeading"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/hint_color">

                    <!-- TextInputEditText for entering phone number -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_txt_bg"
                        android:hint="@string/doctor_name_hint"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cityRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameRelative">

                <!-- TextView displaying "Phone number" -->
                <TextView
                    android:id="@+id/cityHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/doctor_city"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cityHeading"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="6dp"
                    app:boxCornerRadiusBottomStart="6dp"
                    app:boxCornerRadiusTopEnd="6dp"
                    app:boxCornerRadiusTopStart="6dp"
                    app:boxStrokeColor="@color/hint_color"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconTint="@color/hint_color"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/hint_color">

                    <AutoCompleteTextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_g_faisalabad"
                        android:inputType="none"
                        android:textColor="@color/hint_color"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/genderRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cityRelative">

                <!-- TextView displaying "Phone number" -->
                <TextView
                    android:id="@+id/genderHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genderHeading"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp">
                    <RadioButton android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:checked="true"/>
                    <RadioButton android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/female"/>
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/saveRelative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/genderRelative">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/orange"
                    android:text="@string/save"
                    android:textSize="16sp"
                    app:cornerRadius="6dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>