<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close"
        app:tint="@color/orange" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/closeBtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/hint_color"
        app:hintEnabled="false"
        app:hintTextColor="@color/hint_color">

        <!-- TextInputEditText for entering name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/enter_your_pet_s_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AgeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/nameLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/hint_color"
        app:hintEnabled="false"
        app:hintTextColor="@color/hint_color">

        <!-- TextInputEditText for entering name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/enter_your_pet_s_age"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breedLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/AgeLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/hint_color"
        app:hintEnabled="false"
        app:hintTextColor="@color/hint_color">

        <!-- TextInputEditText for entering name -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/enter_your_pet_s_breed"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/breedLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/female" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/dialogProgressbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible" />

    <Button
        android:id="@+id/addPetBtn"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@id/dialogProgressbar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/add_pet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

</RelativeLayout>